# rust-frame

./: 01_QUICK_START.md  02_API_GUIDE.md  03_QR_LOGIN.md  04_ERROR_CODES.md  05_WEBSOCKET.md  06_TESTING.md  07_ARCHITECTURE.md  Cargo.toml  ME_API_TEST.md  README.md  SCAN_TO_REGISTER.md  TEST_TOKEN_GENERATION.md  rust-toolchain.toml
docker/initdb/: 002_create_qr_login_sessions.sql
frame-help/: keypair.json
scaffold/: Cargo.toml
scaffold/examples/: app_simulator.html  qr_login_websocket.html
scaffold/src/backend/: app_router.rs  errors.rs  errors_test.rs  mod.rs
scaffold/src/backend/api/: mod.rs
scaffold/src/backend/api/code/: send_email.rs  send_phone.rs
scaffold/src/backend/api/examples/: error_handling_examples.rs
scaffold/src/backend/api/qr_login/: check_status.rs  confirm_login.rs  generate_qr.rs  qr_login_test.rs  ws_status.rs
scaffold/src/backend/api/user/: generate_test_token.rs  get_me.rs  mod.rs
scaffold/src/backend/config/: constants.rs  mod.rs
scaffold/src/backend/middleware/: auth_middleware.rs
scaffold/src/backend/utils/: extractors.rs  jwt.rs  mod.rs
tests/: run_all_tests.sh
tests/e2e/: complete_login_flow.sh
tests/integration/: api_tests.rs
