[workspace.package]
version = "1.39.2"
authors = ["pureblackalex@google.com"]
edition = "2021"
rust-version = "1.90.0"
repository = "https://github.com/pldao/rust-frame"
license = "MIT OR Apache-2.0"


[workspace]
resolver = "2"
members = [
    "frame-help",
    "scaffold",
]

[workspace.lints.clippy]
all = { level = "allow", priority = -100 }
correctness = { level = "deny", priority = -50 }
suspicious = { level = "deny", priority = -50 }
perf = { level = "deny", priority = -50 }
single_char_pattern = "allow"
clone_on_copy = "deny"
derivable_impls = "deny"
redundant_clone = "deny"
len_zero = "deny"
or_fun_call = "deny"
unnecessary_lazy_evaluations = "deny"


[workspace.dependencies]
actix-web = "4"
actix-cors = "0.7.0"
actix-service = "2.0.0"
actix-web-httpauth = "0.8.1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
clap = { version = "4", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }


sea-orm = { version = "1.1.0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"], default-features = true }
base64 = "0.22.1"

jsonwebtoken = "9.3.0"
bcrypt = " 0.16.0"
chrono = "0.4.19"
sha2 = "0.10.8"
anyhow = "1.0.77"
futures = "0.3.31"
hex = "0.4.3"
bs58 = "0.5"
rand = "0.7.3"
ring = "0.17.14"
once_cell = "1.20.2"

#code
lettre = "0.11.10"
