[package]
name = "scaffold"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
actix-web.workspace = true
actix-cors.workspace = true
actix-service.workspace = true
actix-web-httpauth.workspace = true
actix-ws = "0.3"

tokio.workspace = true

serde.workspace = true
serde_json.workspace = true
dotenv.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

sea-orm.workspace = true
base64.workspace = true
jsonwebtoken.workspace = true
bcrypt.workspace = true
chrono.workspace = true

sha2.workspace = true
futures.workspace = true
anyhow.workspace = true
thiserror.workspace = true
hex.workspace = true
bs58.workspace = true

ring.workspace = true
rand.workspace = true
futures-util = "0.3.31"

once_cell.workspace = true

lettre.workspace = true
uuid = { version = "1.10", features = ["v4", "serde"] }
qrcode = "0.14"
image = "0.25"
